2009-04-28	Chris Johns <chrisj@rtems.org>

	* fileio/init.c, fileio/system.h, iostream/init.cc,
	loopback/init.c, pppd/init.c, pppd/pppdapp.c: Do not build if
	BSP_SMALL_MEMORY is defined. Remove this code once a better way is
	supported by the build system.

2009-04-14	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* fileio/init.c: Removed obsolete header include.

2009-04-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* base_mp/node1/Makefile.am, base_mp/node2/Makefile.am,
	base_sp/Makefile.am, capture/Makefile.am, cdtest/Makefile.am,
	fileio/Makefile.am, hello/Makefile.am, iostream/Makefile.am,
	loopback/Makefile.am, minimum/Makefile.am, nsecs/Makefile.am,
	paranoia/Makefile.am, pppd/Makefile.am, ticker/Makefile.am,
	unlimited/Makefile.am: Eliminate _exe_/.exe.

2009-03-29  Joel Sherrill <joel.sherrill@gmail.com>

	* fileio/init.c: Change arguments to rtems_shell_init() to match
	new expectations.

2009-03-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* cdtest/main.cc: Use printk() in global destructors since printf() no
	longer works.

2009-02-27	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* fileio/init.c: Adapt to modified shell configuration

2008-12-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* capture/test1.c: Add const to eliminate warning.

2008-12-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* capture/test1.c: Eliminate all public use of TOD conversion routines.

2008-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* unlimited/init.c: Run all tests successfully with maxixum number of
	priorities as 16 instead of 256. This was done by temporarily
	modifying the score priority.h maximum. This allowed testing of all
	API code to ensure that it worked properly with a reduced number of
	priorities. Most modifications were to switch from hard-coded maximum
	to using the API provided methods to determine maximum number of
	priority levels.

2008-12-09	Joel Sherrill <joel.sherrill@oarcorp.com>
